[gd_scene load_steps=7 format=3 uid="uid://c1gjseuge5rss"]

[ext_resource type="Script" path="res://src/ui/tag.gd" id="1_o8cci"]
[ext_resource type="Shader" uid="uid://ck48osohs7wu0" path="res://assest/shader/icon_color.tres" id="2_bb3vy"]
[ext_resource type="Texture2D" uid="uid://bhyrtvwe5ogxr" path="res://assest/icon/ui/times-circle.svg" id="3_s2k4s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n6jf7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bnp7r"]
resource_local_to_scene = true
bg_color = Color(0.901961, 0.901961, 0.901961, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cddof"]
shader = ExtResource("2_bb3vy")
shader_parameter/tint_color = Color(0.0099, 0.024915, 0.11, 1)

[node name="Tag" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
theme_override_constants/separation = 0
script = ExtResource("1_o8cci")

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_n6jf7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n6jf7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_n6jf7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n6jf7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_n6jf7")
edit_alpha = false

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_bnp7r")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "C++"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_bnp7r")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Delete" type="TextureButton" parent="PanelContainer2/MarginContainer"]
material = SubResource("ShaderMaterial_cddof")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("3_s2k4s")
ignore_texture_size = true
stretch_mode = 5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="popup_closed" from="ColorPickerButton" to="." method="_on_color_picker_button_popup_closed"]
[connection signal="gui_input" from="PanelContainer" to="." method="_on_panel_container_gui_input"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/Delete" to="." method="_on_delete_pressed"]
